--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dag-flow"]
+[submodule "submodules/dag-flow"]
 	path = submodules/dag-flow
 	url = https://git.jinr.ru/dag-computing/dag-flow.git
